2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (tray_icon_activate_cb): Make a single-click
	on the tray icon popup the "new message" dialogue, when no
	messages are waiting (Closes: #495384)

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c:
	(phonemgr_listener_init), (phonemgr_listener_connect),
	(phonemgr_listener_get_own_details): When connecting the first
	time, try to get our own phone number, for use in the telepathy
	backend, not exported yet, and only works on some phones

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* ui/phonemgr.glade: Make the icons used named icons, instead of
	the stock ones. The stock icons didn't get themed, and didn't
	load if GNOME and gnome-phone-manager were installed in different
	prefixes. Remove "gnome" requires from the file as well
	(Closes: #495229)

2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Big patch from Pawel Kot
	<gnokii@gmail.com> to add all the phones from gnokii
	to the phones.xml file (Closes: #454825)

2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Fix the text we send not being echo'ed back in the UI

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Init the i18n functions

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Don't escape the data coming from telepathy itself

	* telepathy/main.c: (main): And init i18n

	* libgsm/Makefile.am:
	* libgsm/glibgsmtest.c: (main): more i18n

	* libgsm/phonemgr-listener.c: (phonemgr_listener_poll): add some
	accents to the test messages sent

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/sms.profile: Add a profile file for empathy, to be
	copied to /usr/share/mission-control/profiles/ (doesn't actually work)

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/*: Rename the backend "Phoney", as in "phone", haha,
	and add the telepathy manager file, as well as the D-Bus service