@@ -1,5 +1,11 @@
 2007-11-12  Bastien Nocera  <hadess@hadess.net>
 
+	* src/e-contact-entry.c: Update from contact-lookup-applet,
+	and remove the need to set the addressbook sources to
+	autocomplete
+
+2007-11-12  Bastien Nocera  <hadess@hadess.net>
+
 	* src/icon.c: (tray_icon_activate_cb): Make a single-click
 	on the tray icon popup the "new message" dialogue, when no
 	messages are waiting (Closes: #495384)
